--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <link rel="stylesheet" href="https://cdn.anapolis.go.gov.br/css/pma.css" />
-  <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js" crossorigin></script>
-  <script src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js" crossorigin></script>
+  <link rel="stylesheet" href="https://cdn.anapolis.go.gov.br/css/dashboard.css" />
   <script>var Alert = ReactBootstrap.Alert;</script>
   <title>CMTT - Importador de Penalidades e Autuação</title>
 </head>
