-efetua bundle.js

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://cdn.anapolis.go.gov.br/css/pma.css" />
   <link rel="stylesheet" href="https://cdn.anapolis.go.gov.br/css/dashboard.css" />
   <script>var Alert = ReactBootstrap.Alert;</script>
-  <title>CMTT - Importador de Penalidades e Autuação</title>
+  <title>CMTT - Prefeitura de Anápolis - Orgulho de viver aqui!</title>
 </head>
 
 <body>
