--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,28 @@
   <link rel="stylesheet" href="https://cdn.anapolis.go.gov.br/css/dashboard.css" />
   <script>var Alert = ReactBootstrap.Alert;</script>
   <title>CMTT - Prefeitura de Anápolis - Orgulho de viver aqui!</title>
+  <style>
+    .card-cmtt {
+      background-color: #ffcc29;
+      border-radius: 1rem;
+    }
+
+    .text-cmtt {
+      display: block;
+      font-size: 2em;
+      margin-block-start: 0.67em;
+      margin-block-end: 0.67em;
+      margin-inline-start: 0px;
+      margin-inline-end: 0px;
+      font-weight: bold;
+    }
+
+    .icon-cmtt {
+      font-size: 1.2em !important;
+      margin: 0.2rem 0.5rem;
+      float: left;
+    }
+  </style>
 </head>
 
 <body>
