--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,14 @@
       border-radius: 1rem;
     }
 
+    .btn-cmtt-exp {
+      color: #000 !important;
+      font-weight: bold;
+      background-color: #ffcc29 !important;
+      border-color: #ffcc29 !important;
+      background-image: -webkit-linear-gradient(top, #ffcc29 0%, #ffcc29 100%) !important;
+    }
+
     .text-cmtt {
       display: block;
       font-size: 2em;
